# calculator-ms

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  RELEASE_PLAN.md  config.yaml  llms.txt  openapi.yaml  pyproject.toml
.claude/commands/: release-plan.md
docs/: release-plan-v0.1.0.md  release-plan-v0.2.0.md  release-plan-v0.3.0.md  release-plan-v0.4.0.md  release-plan-v0.5.0.md  release-plan-v0.5.1.md
scripts/: generate_openapi.py  test_github_connectivity.sh
src/calculator/: __init__.py  api.py  calculator.py  config.py
tests/: test_api.py  test_calculator.py
