[project]
name = "calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Rubens Gomes",email = "rubens.s.gomes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
]

[tool.poetry]
packages = [{include = "calculator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "black (>=26.1.0,<27.0.0)",
]
